--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,14 @@
 <h1>Create an Article</h1>
 
+<% if @article.errors.any? %>
+  <h4 class="text-red">The following errors prevented the article from being created:</h4>
+  <ul>
+    <% @article.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_for @article do |f| %>
   <p>
     <%= f.label :title %></br>
@@ -8,7 +17,7 @@
 
   <p>
     <%= f.label :description %></br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, size: '24x6' %>
   </p>
   <%= f.submit %>
 <% end %>
