--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+  <% flash.each do |_name, msg| %>
+    <ul>
+      <li>
+        <%= msg %>
+      </li>
+    </ul>
+  <% end %>
     <%= yield %>
   </body>
 </html>
