--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an Article</h1>
+<h1>Edit an Article</h1>
 
 <% if @article.errors.any? %>
   <h4 class="text-red">The following errors prevented the article from being created:</h4>
