--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,3 +1,12 @@
+<% if @article.errors.any? %>
+  <h4 class="text-red">The following errors prevented the article from being created:</h4>
+  <ul>
+    <% @article.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_for @article do |f| %>
   <p>
     <%= f.label :title %></br>
