--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,5 @@
-<h1>Welcome#home</h1>
-<p>Find me in app/views/welcome/home.html.erb</p>
+<div class="jumbotron text-center">
+  <h1>Welcome to TMoney Blogith!</h1>
 
-<%= link_to 'Articles', articles_path %>
+  <%= link_to 'Sign-Up!', "", class:"btn btn-lg btn-primary" %>
+</div>
