--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -2,4 +2,5 @@
   <h1>Welcome to TMoney Blogith!</h1>
 
   <%= link_to 'Sign-Up!', "", class:"btn btn-lg btn-primary" %>
+  <p class="photo-cred">Photo by Andrew Neel on Unsplash</p>
 </div>
