--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<!-- this is basically a wrapper file for all your views -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -15,5 +16,6 @@
     <div class="container">
       <%= yield %>
     </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
