add styling for errors

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,10 +22,11 @@ $navbar-default-bg: #3385ff;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: grey;
-  border-top: 1px solid grey;
+  //background-color: grey;
+  border-top: 1px solid #eaeaea;
   text-align: center;
-  margin-top: 30px;
+  margin-top: 45px;
+  color: grey
 }
 
 .blue {
