--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
 <!-- Footer -->
-<footer class="page-footer blue">
+<footer class="page-footer">
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> AntonioSilvaDev.com</a>
+    <a href="https://antoniosilva.dev/"> AntonioSilvaDev.com</a>
   </div>
   <!-- Copyright -->
 
