--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,21 +1,30 @@
-<% if @article.errors.any? %>
-  <h4 class="text-red">The following errors prevented the article from being created:</h4>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
+<%= render 'shared/errors', obj: @article %>
 
-<%= form_for @article do |f| %>
-  <p>
-    <%= f.label :title %></br>
-    <%= f.text_field :title %>
-  </p>
-
-  <p>
-    <%= f.label :description %></br>
-    <%= f.text_area :description, size: '24x6' %>
-  </p>
-  <%= f.submit %>
-<% end %>
+<div class="row">
+  <div class='col-sm-12'>
+    <%= form_for @article do |f| %>
+    <div class="form-group row">
+      <%= f.label :title, class:"col-sm-2 col-form-label text-right" %>
+      <div class="col-sm-10">
+        <%= f.text_field :title, class: "form-control", placeholder: "Name of Article" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :description, class:"col-sm-2 col-form-label text-right" %>
+      <div class="col-sm-10">
+        <%= f.text_area :description, size: '24x6', class: "form-control", placeholder: "Enter Article text here....." %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <div class="offset-sm-2 col-sm-8 ">
+        <%= f.submit class: "btn btn-primary btn-sm" %>
+      </div>
+    </div>
+  <% end %>
+    <div class="row">
+      <div class="col-sm-12 offset-sm-5">
+        [<%= link_to 'Cancel and return to articles', articles_path, class: "text-danger" %>]
+      </div>
+    </div>
+  </div>
+</div>
