--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,23 @@
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
+  <h2 align="center">Title: <%= @article.title %></h2>
+  <div class="row">
+    <div class="col-sm-8 offset-sm-2">
+      <div class="card">
+          <h5 class="text-center pt-2"> <strong>Description: </strong></h5>
+        <div class="card-body text-center">
+          <%= simple_format(@article.description) %>
+        </div>
+        <div class="card-footer text-center">
+          <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-sm btn-primary" %>
+          <%= link_to 'Back', articles_path, class: "btn btn-sm btn-info" %>
+          <%= link_to "Delete",
+                      article_path(@article),
+                      method: :delete,
+                      data: {confirm: "Are you sure?"},
+                      class: "btn btn-sm btn-danger" %>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @article.description %>
-</p>
 
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+
