--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,9 @@ $navbar-default-bg: #3385ff;
 //@import "bootstrap-sprockets";
 @import "bootstrap";
 
-
+body{
+  padding-bottom: 100px;
+}
 #logo {
   float: left;
   font-size: 1.7em;
@@ -22,7 +24,7 @@ $navbar-default-bg: #3385ff;
   left: 0;
   bottom: 0;
   width: 100%;
-  //background-color: grey;
+  background-color: white;
   border-top: 1px solid #eaeaea;
   text-align: center;
   margin-top: 45px;
@@ -58,4 +60,21 @@ $navbar-default-bg: #3385ff;
   margin-bottom: 0;
   padding-right: 5px;
   font-weight: 200;
+}
+
+.article-title {
+  font-weight: bold;
+  font-size: 1.5em;
+  }
+
+.article-body {
+  border-top: 1px solid #eaeaea;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  min-height: 50px;
+}
+
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
 }
