--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,31 +1,30 @@
 <div class="row">
-  <div class='col-md-12'>
-    <h1>Articles</h1>
+  <div class="col-sm-12">
+    <h1 align="center">Listing all articles</h1>
   </div>
 </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% @articles.each do |article| %>
+  <div class="row">
+    <div class="col-sm-10 offset-sm-1">
+      <div class="card bg-light p-4 mb-3">
+        <div class="article-title">
+          <%= link_to article.title, article_path(article) %>
+        </div>
+        <div class="article-body">
+          <%= truncate(article.description, length: 100) %>
+        </div>
+        <div class="article-actions">
+          <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-sm btn-primary" %>
+          <%= link_to "Delete this article",
+                      article_path(article),
+                      method: :delete,
+                      data: { confirm: "Are you sure you want to delete the article?"},
+                      class: "btn btn-sm btn-danger" %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
 
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
-
-<%= link_to 'New Article', new_article_path %>
