--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,12 @@
   <h2 align="center">Title: <%= @article.title %></h2>
   <div class="row">
-    <div class="col-sm-8 offset-sm-2">
-      <div class="card">
+    <div class="col-sm-10 offset-sm-1">
+      <div class="card bg-light p-4 mb-3">
           <h5 class="text-center pt-2"> <strong>Description: </strong></h5>
         <div class="card-body text-center">
           <%= simple_format(@article.description) %>
         </div>
-        <div class="card-footer text-center">
+        <div class="article-actions">
           <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-sm btn-primary" %>
           <%= link_to 'Back', articles_path, class: "btn btn-sm btn-info" %>
           <%= link_to "Delete",
