--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
-    <% if Rails.env.development? %>
+    <% if Rails.env.foo? %>
       <div class="row" style="background-color: lightgrey">
         <div class="col-md-10 offset-md-1">
           <%= debug(params) %>
