--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class='col-sm-12'>
-    <%= form_for @article do |f| %>
+    <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f| %>
     <div class="form-group row">
       <%= f.label :title, class:"col-sm-2 col-form-label text-right" %>
       <div class="col-sm-10">
