--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class='col-sm-12'>
-    <%= form_for @user do |f| %>
+    <%= form_with(model: @user, class: "shadow p-3 mb-3 bg-info rounded", local: true, html: { autocomplete: "off" }) do |f| %>
     <div class="form-group row">
       <%= f.label :username, class:"col-sm-2 col-form-label text-right" %>
       <div class="col-sm-10">
