--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,10 +1,10 @@
 <% if obj.errors.any? %>
   <div class="row mb-4">
-    <div class="col-sm-8 offset-sm-2">
-      <div class="card bg-danger">
+    <div class="col-sm-12">
+      <div class="card bg-danger shadow">
         <div class="card-header">
           <h4 class="card-title">
-            <%= pluralize(obj.errors.count, "error") %> prohibited this <%= obj.class %> from being saved:
+            <%= pluralize(obj.errors.count, "error") %> prohibited this <%= obj.class.name.downcase %> from being saved:
           </h4>
           <div class="card-body">
             <ul>
