--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,38 +1,3 @@
 <h1 align="center">Signup for Blogith!</h1>
 
-<%= render 'shared/errors', obj: @user %>
-
-<div class="row">
-  <div class='col-sm-12'>
-    <%= form_with(model: @user, class: "shadow p-3 mb-3 bg-info rounded", local: true, html: { autocomplete: "off" }) do |f| %>
-    <div class="form-group row">
-      <%= f.label :username, class:"col-sm-2 col-form-label text-right" %>
-      <div class="col-sm-10">
-        <%= f.text_field :username, class: "form-control", placeholder: "Enter User Name", autofocus: true %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :email, class:"col-sm-2 col-form-label text-right" %>
-      <div class="col-sm-10">
-        <%= f.email_field :email, class: "form-control", placeholder: "Enter email here" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :password, class:"col-sm-2 col-form-label text-right" %>
-      <div class="col-sm-10">
-        <%= f.password_field :password, class: "form-control", autocomplete: "off", placeholder: "Enter password" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <div class="offset-sm-2 col-sm-8 ">
-        <%= f.submit 'Sign up', class: "btn btn-primary btn-sm" %>
-      </div>
-    </div>
-  <% end %>
-    <div class="row">
-      <div class="col-sm-12 offset-sm-5">
-        [<%= link_to 'Cancel and return to homepage', root_path %>]
-      </div>
-    </div>
-  </div>
-</div>
+<%= render "form" %>
