--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,31 +4,31 @@
   <div class='col-sm-12'>
     <%= form_with(model: @user, class: "shadow p-3 mb-3 bg-info rounded", local: true, html: { autocomplete: "off" }) do |f| %>
     <div class="form-group row">
-      <%= f.label :username, class:"col-sm-2 col-form-label text-right" %>
+      <%= f.label :username, class:"col-sm-2 col-form-label text-light" %>
       <div class="col-sm-10">
         <%= f.text_field :username, class: "form-control", placeholder: "Enter User Name", autofocus: true %>
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :email, class:"col-sm-2 col-form-label text-right" %>
+      <%= f.label :email, class:"col-sm-2 col-form-label text-light" %>
       <div class="col-sm-10">
         <%= f.email_field :email, class: "form-control", placeholder: "Enter email here" %>
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :password, class:"col-sm-2 col-form-label text-right" %>
+      <%= f.label :password, class:"col-sm-2 col-form-label text-light" %>
       <div class="col-sm-10">
         <%= f.password_field :password, class: "form-control", autocomplete: "off", placeholder: "Enter password" %>
       </div>
     </div>
     <div class="form-group row">
       <div class="col-sm-12 text-right">
-        <%= f.submit 'Sign up', class: "btn btn-outline-light btn-lg " %>
+        <%= f.submit(@user.new_record? ? 'Sign up' : 'Update Account Info', class: "btn btn-outline-light") %>
       </div>
     </div>
   <% end %>
     <div class="row">
-      <div class="col-sm-12 offset-sm-5">
+      <div class="col-sm-12 text-right">
         [<%= link_to 'Cancel and return to homepage', root_path %>]
       </div>
     </div>
