--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,40 +1,8 @@
-<div class="row">
-  <div class="col-sm-12">
-    <h1 align="center">Listing all articles</h1>
-  </div>
+<h1 align="center">Listing all articles</h1>
+<div class="d-flex justify-content-center">
+  <%= will_paginate(@articles, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'pagination-sm text-center') %>
 </div>
-
-<% @articles.each do |article| %>
-  <div class="row">
-    <div class="col-sm-10 offset-sm-1">
-      <div class="card bg-light p-4 mb-3">
-        <div class="article-title">
-          <%= link_to article.title, article_path(article) %>
-        </div>
-        <div class="article-body">
-          <%= truncate(article.description, length: 100) %>
-
-
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-            <small>Created by: <%= article.user.username if article.user %>,
-                      <%= time_ago_in_words(article.created_at) %> ago,
-                      last updated <%= time_ago_in_words(article.updated_at) %> ago
-          </small>
-            </div>
-          </div>
-        <div class="article-actions">
-          <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-sm btn-primary" %>
-          <%= link_to "Delete this article",
-                      article_path(article),
-                      method: :delete,
-                      data: { confirm: "Are you sure you want to delete the article?"},
-                      class: "btn btn-sm btn-danger" %>
-        </div>
-      </div>
-    </div>
-  </div>
-<% end %>
-
-
+<%= render 'articles', articles: @articles %>
+<div class="d-flex justify-content-center">
+  <%= will_paginate(@articles, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'pagination-sm text-center') %>
+</div>
