--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
-<h1 align="center">Welcome to <%= @user.username %>'s page</h1>
-<div class='row'>
-  <div class="col-md-4 col-md-offset-4 center">
-    <%= gravitar_for @user, size: 150 %>
+<h1 class="text-center">Welcome to <%= @user.username %>'s page</h1>
+<div class='row justify-content-center mb-4'>
+  <div class="col-md-4 col-md-offset-4">
+    <%= gravitar_for @user, size: 200 %>
   </div>
 </div>
-<h5 align="center"><%= @user.username %>'s articles</h5>
-<%= render 'articles/article', articles: @user.articles %>
+<h3 class="text-center">Articles</h3>
+<%= render 'articles/articles', articles: @user.articles %>
