--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,6 +5,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
+    <li class="nav-item">
+        <%= link_to "Bloggers", users_path, class: 'nav-link' %>
+      </li>
       <li class="nav-item">
         <%= link_to "Articles", articles_path, class: 'nav-link' %>
       </li>
