--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1 align="center">Listing all users</h1>
+<h1 align="center">Listing all Bloggers</h1>
 <div class="d-flex justify-content-center">
   <%= will_paginate(@users, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'pagination-sm text-center') %>
 </div>
