--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,7 +29,7 @@
   <% end %>
     <div class="row">
       <div class="col-sm-12 text-right">
-        [<%= link_to 'Cancel and return to homepage', root_path %>]
+        [<%= link_to 'Cancel and return to profile page', user_path %>]
       </div>
     </div>
   </div>
