--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,8 @@
 <h1 align="center">Listing all articles</h1>
-<div class="d-flex justify-content-center">
-  <%= will_paginate(@articles, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'pagination-sm text-center') %>
+<div class="flickr_pagination d-flex justify-content-center">
+  <%= will_paginate @articles %>
 </div>
 <%= render 'articles', articles: @articles %>
-<div class="d-flex justify-content-center">
-  <%= will_paginate(@articles, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'pagination-sm text-center') %>
+<div class="flickr_pagination d-flex justify-content-center">
+  <%= will_paginate @articles %>
 </div>
