--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,8 @@
 <h1 align="center">Listing all Bloggers</h1>
-<div class="d-flex justify-content-center">
-  <%= will_paginate(@users, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'pagination-sm text-center') %>
+<div class="flickr_pagination d-flex justify-content-center">
+  <%= will_paginate @users %>
 </div>
 <%= render 'users', users: @users %>
-<div class="d-flex justify-content-center">
-  <%= will_paginate(@users, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: 'pagination-sm text-center') %>
+<div class="flickr_pagination d-flex justify-content-center">
+  <%= will_paginate @users %>
 </div>
