--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,8 @@
 <h1 class="text-center">Welcome to <%= @user.username %>'s page</h1>
 <div class='row justify-content-center mb-4'>
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-4 col-md-offset-4 text-center">
     <%= gravitar_for @user, size: 200 %>
+    <%= link_to "Edit Your Profile", edit_user_path(@user), class: "btn btn-sm btn-outline-primary mt-3" %>
   </div>
 </div>
 <h3 class="text-center">Articles</h3>
